# finalhomework

./: CMakeLists.txt  readme.md
.github/workflows/: main.yml
include/: DbManager.h  MainWindow.h  ModbusWorker.h
src/: DbManager.cpp  MainWindow.cpp  ModbusWorker.cpp  main.cpp
